--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,4 @@
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
+.container {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
