Changes in design

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .container {
   position: relative;
-  background-color: #282c34;
+  background-color: #deb9b9;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(37, 3, 3);
 }
 
 .App-link {
