login page design down

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
-.container {
+.app {
   position: relative;
   background-color: #eeeeee;
   min-height: 100vh;
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   font-size: calc(3px + 2vmin);
   color: rgb(37, 3, 3);
 }
