--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app {
   position: relative;
   background-color: #eeeeee;
-  min-height: 100vh;
+  min-height: 99vh;
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -9,6 +9,7 @@
   justify-content: center;
   font-size: calc(3px + 2vmin);
   color: rgb(37, 3, 3);
+  overflow: hidden;
 }
 
 .App-link {
