Finish navbar responsive

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,15 @@
   width: 100%;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
   font-size: calc(3px + 2vmin);
   color: rgb(37, 3, 3);
 }
 
+@media (min-width: 819px) {
+  .app {
+    justify-content: center;
+  }
+}
 .App-link {
   color: #61dafb;
 }
