--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 .app {
   position: relative;
   background-color: #eeeeee;
