--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap');
-
+* {
+  /* border: 1px solid red; */
+}
 .app {
   position: relative;
   background-color: #eeeeee;
@@ -11,12 +12,19 @@
   font-size: calc(3px + 2vmin);
   color: #250303;
   overflow: hidden;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .App-link {
   color: #61dafb;
+  font-family: 'Montserrat', sans-serif;
 }
 
 button {
   font-size: calc(3px + 2vmin);
+  font-family: 'Montserrat', sans-serif;
+}
+.slick-prev:before,
+.slick-next:before {
+  color: #009688;
 }
