--- a/src/containers/Search/CustomNodeStyles.css
+++ b/src/containers/Search/CustomNodeStyles.css
@@ -1,16 +1,15 @@
 .custom-node-container {
   width: 180px;
-  height: 60px;
+  height: 80px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   background-color: #557572;
   color: #ffffff;
   font-size: 13px;
   border-radius: 50px;
   box-sizing: border-box;
   overflow: visible;
-  padding: 0 5px 0 0;
   cursor: pointer;
 }
 
@@ -25,9 +24,6 @@
 .node-label {
   flex: 1;
   text-align: center;
-  word-wrap: break-word;
   white-space: normal;
-  padding: 0 5px;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
